--- a/templates/result.html
+++ b/templates/result.html
@@ -4,7 +4,7 @@
    <title>Statistics</title>
    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static', filename='style.css') }}" >
 </head>
-   <h2>{{ result['state'] }} statistics </h2>
+   <h2>{{ result['state'] }} statistics (Total cases: {{ total }} ) </h2>
    <body>
       <table>
          <tr>
@@ -12,6 +12,7 @@
             <th>Active</th>
             <th>Recovered</th>
             <th>Deceased</th>
+            <th>Total</th>
          </tr>
          {% for i in range(0,length) %}
             <tr>
@@ -19,6 +20,7 @@
                <td> {{ result['districtData'][i]['active'] }} </td>
                <td> {{ result['districtData'][i]['recovered'] }} </td>
                <td> {{ result['districtData'][i]['deceased'] }} </td>
+               <td> {{ result['districtData'][i]['confirmed'] }} </td>
             </tr>
          {% endfor %}
       </table>
