--- a/templates/state.html
+++ b/templates/state.html
@@ -2,8 +2,12 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
    <body>
       <form action = "http://localhost:8080/result" method = "post">
-         <h2>State</h2>
-         <p><input type = "text" name = "nm" /></p>
+         <h1>State</h1>
+         <select name="nm">
+         {% for i in range(0,length) %}
+            <option name="name">{{ state[i]['state'] }}</option>
+         {% endfor %}
+         </select>
          <p><input type = "submit" value = "submit" /></p>
       </form>
    </body>
